change site name

--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -45,6 +45,6 @@ These products come from a variety of sources throughout the geosciences.
   Macrostrat documentation
 </LinkCard>
 
-<LinkCard href="/test" title="Test Site">
+<LinkCard href="/mainpageTest" title="Test Site">
   New test site @David
 </LinkCard>
