fixed button formatting on first page

--- a/src/pages/mainpageTest/+Page.mdx
+++ b/src/pages/mainpageTest/+Page.mdx
@@ -24,9 +24,9 @@ import "./main.styl";
       <h1 class="big">Macrostrat</h1>
       <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
       <ul class="buttons1">
-        <li><a type="button" class="btn btn12" href="/sift/#/">Search</a></li>
-        <li><a type="button" class="btn btn12" href="/map/#3/40.78/-94.13">Geologic Map</a></li>
-        <li><div type="button" class="btn btn12 rockd" onclick="window.location='https://rockd.org'">
+        <li><a type="button" class="btn" href="/sift/#/">Search</a></li>
+        <li><a type="button" class="btn" href="/map/#3/40.78/-94.13">Geologic Map</a></li>
+        <li><div type="button" class="btn rockd" onclick="window.location='https://rockd.org'">
           <div class="rockd-button-container">
             <Image src="rockd.jpg" width="22px" className="rockd-png"></Image>
             <a href="https://rockd.org" target="_blank">Go mobile</a>
