Link fo updated docs page

--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -12,3 +12,4 @@ import { PageBreadcrumbs } from "~/renderer";
 - [Map filter](/dev/filtering)
 
 - [Concept apps](/dev/concepts)
+- [Documentation](/dev/docs)
