--- a/src/pages/dev/people/+Page.mdx
+++ b/src/pages/dev/people/+Page.mdx
@@ -1,103 +1,158 @@
-export { ContentPage as default } from "~/layouts";
 import { PageHeader } from "~/components";
 import { PageBreadcrumbs } from "~/renderer";
 import "./main.styl";
 import { Image } from "./index";
 
+[//]: # "Nav Bar"
+<div class="nav">
+  <ul>
+    <li><a href="#people">People</a></li>
+    <a href="/"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
+  </ul>
+</div>
+\
+\
+
 [//]: # "People"
 <h1 class="big">People</h1>
 
-<Image className="back-img" src="shanan.jpg"></Image>
-
-<div class="people">
+<div class="people" id="people">
     <div class="left">
         <div class="person-info" id="shanan">
-            <n><a href="http://strata.geology.wisc.edu" target="_blank">Shanan Peters</a></n>\
-            <t>Professor, Database Developer</t>\
-            <e>peters -at geology.wisc.edu</e>
+            <Image className="back-img" src="shanan.jpg"></Image>
+            <div class="text">
+                <n><a href="http://strata.geology.wisc.edu" target="_blank">Shanan Peters</a></n>\
+                <t>Professor, Database Developer</t>\
+                <e>peters -at geology.wisc.edu</e>
+            </div>
         </div>
 
         <div class="person-info" id="daven">
-            <n><a href="https://davenquinn.com" target="_blank">Daven Quinn</a></n> \
-            <t>Research Scientist, Developer</t> \
-            <e>daven.quinn -at wisc.edu</e> 
+            <Image className="back-img" src="daven.jpg"></Image>
+            <div class="text">
+                <n><a href="https://davenquinn.com" target="_blank">Daven Quinn</a></n> \
+                <t>Research Scientist, Developer</t> \
+                <e>daven.quinn -at wisc.edu</e> 
+            </div>
         </div>
 
         <div class="person-info" id="evgeny">
-            <n>Evgeny Mazko</n> \
-            <t>Graduate Student</t> \
-            <e>mazko -at wisc.edu</e> 
+            <Image className="back-img" src="evgeny.jpg"></Image>
+            <div class="text">
+                <n>Evgeny Mazko</n> \
+                <t>Graduate Student</t> \
+                <e>mazko -at wisc.edu</e> 
+            </div>
         </div>
             
         <div class="person-info" id="michael">
-            <n><a href="https://geoscience.wisc.edu/geoscience/people/staff/name/michael-mcclennen/" target="_blank">Michael McClennen</a></n> \
-            <t>Senior Programmer Analyst</t> \
-            <e>mmcclenn -at- geology.wisc.edu</e> 
+            <Image className="back-img" src="michael.jpg"></Image>
+            <div class="text">
+                <n><a href="https://geoscience.wisc.edu/geoscience/people/staff/name/michael-mcclennen/" target="_blank">Michael McClennen</a></n> \
+                <t>Senior Programmer Analyst</t> \
+                <e>mmcclenn -at- geology.wisc.edu</e> 
+            </div>
         </div>
 
         <div class="person-info" id="casey">
-            <n><a href="https://idzikowski-casey.github.io/personal-site/" target="_blank">Casey Idzikowski</a></n> \
-            <t>Research Specialist, Developer (former)</t> 
+        <Image className="back-img" src="casey.jpg"></Image>
+            <div class="text">
+                <n><a href="https://idzikowski-casey.github.io/personal-site/" target="_blank">Casey Idzikowski</a></n> \
+                <t>Research Specialist, Developer (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="daniel">
-            <n><a href="http://strata.geology.wisc.edu" target="_blank">Daniel Segessenmen</a></n> \
-            <t>Graduate Student (former)</t> 
+        <Image className="back-img" src="daniel.jpg"></Image>
+            <div class="text">
+                <n><a href="http://strata.geology.wisc.edu" target="_blank">Daniel Segessenmen</a></n> \
+                <t>Graduate Student (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="shan">
-            <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Shan Ye</a></n> \
-            <t>Graduate Student (former)</t> 
+        <Image className="back-img" src="shan.jpg"></Image>
+            <div class="text">
+                <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Shan Ye</a></n> \
+                <t>Graduate Student (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="ben">
-            <n><a href="http://strata.geology.wisc.edu" target="_blank">Ben Linzmeier</a></n> \
-            <t>Postdoctoral Scholar (former)</t> 
+        <Image className="back-img" src="ben.jpg"></Image>
+            <div class="text">
+                <n><a href="http://strata.geology.wisc.edu" target="_blank">Ben Linzmeier</a></n> \
+                <t>Postdoctoral Scholar (former)</t> 
+            </div>
         </div>
     </div>
 
     <div class="right">
         <div class="person-info" id="afiqah">
-            <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Afiqah Rafi</a></n> \
-            <t>Undergrad Student (former)</t> 
+        <Image className="back-img" src="afiqah.jpg"></Image>
+            <div class="text">
+                <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Afiqah Rafi</a></n> \
+                <t>Undergrad Student (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="sharon">
-            <n><a href="http://geoscience.wisc.edu/geoscience/people/student/?id=1007" target="_blank">Sharon McMullen</a></n> \
-            <t>Researcher (former)</t> 
+        <Image className="back-img" src="sharon.jpg"></Image>
+            <div class="text">
+                <n><a href="http://geoscience.wisc.edu/geoscience/people/student/?id=1007" target="_blank">Sharon McMullen</a></n> \
+                <t>Researcher (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="andrew">
-            <n><a href="http://www.azstrata.org" target="_blank">Andrew Zaffos</a></n> \
-            <t>Data Mobilization and Research Scientist</t> \
-            <e>azaffos -at- email.arizona.edu</e> 
+        <Image className="back-img" src="andrew.jpg"></Image>
+            <div class="text">
+                <n><a href="http://www.azstrata.org" target="_blank">Andrew Zaffos</a></n> \
+                <t>Data Mobilization and Research Scientist</t> \
+                <e>azaffos -at- email.arizona.edu</e> 
+            </div>
         </div>
 
         <div class="person-info" id="jon">
-            <n><a href="http://www.jonhusson.com" target="_blank">Jon Husson</a></n> \
-            <t>Postdoctoral Researcher (former)</t> \
-            <e>jhusson - at - uvic.ca</e> 
+        <Image className="back-img" src="jon.jpg"></Image>
+            <div class="text">
+                <n><a href="http://www.jonhusson.com" target="_blank">Jon Husson</a></n> \
+                <t>Postdoctoral Researcher (former)</t> \
+                <e>jhusson - at - uvic.ca</e> 
+            </div>
         </div>
 
         <div class="person-info" id="erika">
-            <n><a href="https://github.com/ItoErika" target="_blank">Erika Ito</a></n> \
-            <t>Research Intern (former)</t> 
+        <Image className="back-img" src="erika.jpg"></Image>
+            <div class="text">
+                <n><a href="https://github.com/ItoErika" target="_blank">Erika Ito</a></n> \
+                <t>Research Intern (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="noel">
-            <n><a href="http://sedpaleo.org" target="_blank">Noel Heim</a></n> \
-            <t>Researcher (former)</t> 
+        <Image className="back-img" src="noel.jpg"></Image>
+            <div class="text">
+                <n><a href="http://sedpaleo.org" target="_blank">Noel Heim</a></n> \
+                <t>Researcher (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="john">
-            <n><a href="http://www.johnjcz.com" target="_blank">John Czaplewski</a></n> \
-            <t>Next-level Developer (former)</t> 
+        <Image className="back-img" src="john.jpg"></Image>
+            <div class="text">
+                <n><a href="http://www.johnjcz.com" target="_blank">John Czaplewski</a></n> \
+                <t>Next-level Developer (former)</t> 
+            </div>
         </div>
 
         <div class="person-info" id="puneet">
-            <n><a href="http://punkish.org" target="_blank">Puneet Kishor</a></n> \
-            <t>Generally Ignored</t> \
-            <e>punkish at eidesis.org</e> 
+        <Image className="back-img" src="puneet.jpg"></Image>
+            <div class="text">
+                <n><a href="http://punkish.org" target="_blank">Puneet Kishor</a></n> \
+                <t>Generally Ignored</t> \
+                <e>punkish at eidesis.org</e> 
+            </div>
         </div>
     </div>
 </div>
