after pull request

--- a/src/pages/dev/people/+Page.mdx
+++ b/src/pages/dev/people/+Page.mdx
@@ -7,7 +7,7 @@ import { Image } from "./index";
 <div class="nav">
   <ul>
     <li><a href="#people">People</a></li>
-    <a href="/"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
+    <a href="/dev/main-page"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
   </ul>
 </div>
 \
