linked people page from main page

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -9,7 +9,7 @@ import "./main.styl";
     <li><a href="#about">About</a></li>
     <li><a href="#apps">Apps</a></li>
     <li><a href="#api">API</a></li>
-    <li><a href="#people">People</a></li>
+    <li><a href="/dev/people">People</a></li>
     <li><a href="#donate">Donate</a></li>
     <li><a href="#publications">Publications</a></li>
     <a href="/"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
