--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -12,3 +12,4 @@ import { PageBreadcrumbs } from "~/renderer";
 - [Map filter](/dev/filtering)
 - [Main Page](/dev/main-page)
 - [Concept apps](/dev/concepts)
+- [Built with Macrostrat](/dev/apps)
