--- a/src/pages/dev/apps/+Page.mdx
+++ b/src/pages/dev/apps/+Page.mdx
@@ -15,6 +15,8 @@ import "./main.styl";
 <div id="apps">
   <h1 class="big app-header">Built with Macrostrat</h1>
 
+
+  <div class="items">
   <a href="/sift">
     <div class="app-box">
       <Image className="app-img" src="logo_red.png"></Image>
@@ -74,6 +76,7 @@ import "./main.styl";
       </div>
     </div>
   </a>
+  </div> 
 </div>
 
 [//]: # "Footer"
