--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -238,28 +238,17 @@ import "./main.styl";
       </div>
     </div>
   </a>
+
 </div>
 
 <Image className="rock-border" src="rocks-border.jpg"></Image>
 
 
 [//]: # "API"
-<div class="row slide" id="api">
-  <div class="col-xs-12 slide-container">
-    <div class="slide-content slide-content-padded">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="page-title-holder api-title">
-            <h1 class="big">API</h1>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="page-info">
-            All data contained in the Macrostrat database are freely available via our Application Programming Interface (API), which provides a convinient way to retrieve data for analysis or application creation. For more information head over to the <a href="/api">API root</a> to explore available routes.
-          </div>
-        </div>
-      </div>
-    </div>
+<div id="api">
+  <h1 class="big api-header">API</h1>
+  <div class="row">
+  All data contained in the Macrostrat database are freely available via our Application Programming Interface (API), which provides a convinient way to retrieve data for analysis or application creation. For more information head over to the <a href="/api">API root</a> to explore available routes.
   </div>
 </div>
 <Image className="rock-border" src="rocks-border.jpg"></Image>
