--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -113,63 +113,57 @@ import "./main.styl";
 <Image className="rock-border" src="rocks-border.jpg"></Image>
       
 [//]: # "About"
-<div class="row slide" id="about">
-  <div class="col-xs-12 slide-container">
-    <div class="slide-content slide-content-padded">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="page-title-holder about-title">
-            <h1 class="title about-title">About</h1>
-          </div>
-        </div>
-      </div>
-      <div class="row about-row">
-        <div class="col-sm-3 about-body-subtitle">
-          Summary
-        </div>
-        <div class="col-sm-9 about-body page-info">
-          Macrostrat is a platform for the aggregation and distribution of geological data relevant to the spatial and temporal distribution of sedimentary, igneous, and metamorphic rocks as well as data extracted from them. It is linked to the <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive) digital library and machine reading system, and it aims to become a community resource for the addition, editing, and distribution of new stratigraphic, lithological, environmental, and economic data. Interactive applications built upon Macrostrat are designed for educational and research purposes.
-        </div>
-      </div>
+<div id="about">
+  <h1 class="big" id="about-title">
+    About
+    <div class="line"></div>
+  </h1>
+  
+  <div class="about-row">
+    <div class="about-body-subtitle">
+      Summary
+    </div>
+    <div class="about-body">
+      Macrostrat is a platform for the aggregation and distribution of geological data relevant to the spatial and temporal distribution of sedimentary, igneous, and metamorphic rocks as well as data extracted from them. It is linked to the <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive) digital library and machine reading system, and it aims to become a community resource for the addition, editing, and distribution of new stratigraphic, lithological, environmental, and economic data. Interactive applications built upon Macrostrat are designed for educational and research purposes.
+    </div>
+  </div>
 
-      <div class="row about-row">
-        <div class="col-sm-3 about-body-subtitle">
-          License
-        </div>
-        <div class="col-sm-9 about-body page-info">
-          All data are provided under a Creative Commons Attribution 4.0 International license (<a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY-4.0</a>).
-        </div>
-      </div>
+  <div class="row about-row">
+    <div class="col-sm-3 about-body-subtitle">
+      License
+    </div>
+    <div class="col-sm-9 about-body page-info">
+      All data are provided under a Creative Commons Attribution 4.0 International license (<a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY-4.0</a>).
+    </div>
+  </div>
 
-      <div class="row about-row">
-        <div class="col-sm-3 about-body-subtitle">
-          Citation
-        </div>
-        <div class="col-sm-9 about-body page-info">
-          <b>In presentations:</b> Acknowledge Macrostrat by name. You may also include any of the Macrostrat logos accessible on this webpage.
-          \
-          \
-          <b>In publications:</b> Acknowledge Macrostrat as the source of any information or data. In publications, you may cite our most recent infrastructure paper, <a href="https://doi.org/10.1029/2018GC007467" target="_blank">Peters et al. (2018)</a>. In addition, you should also include citations to the original references associated with the data set that was used. These references are accessible from the API. If you would like your paper listed in the official publications, please contact us and we will provide a citation and link.
-        </div>
-      </div>
+  <div class="about-row">
+    <div class="about-body-subtitle">
+      Citation
+    </div>
+    <div class="about-body">
+      <b>In presentations:</b> Acknowledge Macrostrat by name. You may also include any of the Macrostrat logos accessible on this webpage.
+      \
+      \
+      <b>In publications:</b> Acknowledge Macrostrat as the source of any information or data. In publications, you may cite our most recent infrastructure paper, <a href="https://doi.org/10.1029/2018GC007467" target="_blank">Peters et al. (2018)</a>. In addition, you should also include citations to the original references associated with the data set that was used. These references are accessible from the API. If you would like your paper listed in the official publications, please contact us and we will provide a citation and link.
+    </div>
+  </div>
 
-      <div class="row about-row">
-        <div class="col-sm-3 about-body-subtitle">
-          Collaboration
-        </div>
-        <div class="col-sm-9 about-body page-info">
-          Our small team has worked hard to compile, format, and make data available via Macrostrat. We strongly encourage and welcome active collaborations, both scientific and geoinformatic. All data are provided freely on under a <a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY-4.0</a> license.
-        </div>
-      </div>
+  <div class="row about-row">
+    <div class="col-sm-3 about-body-subtitle">
+      Collaboration
+    </div>
+    <div class="col-sm-9 about-body page-info">
+      Our small team has worked hard to compile, format, and make data available via Macrostrat. We strongly encourage and welcome active collaborations, both scientific and geoinformatic. All data are provided freely on under a <a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY-4.0</a> license.
+    </div>
+  </div>
 
-      <div class="row about-row">
-        <div class="col-sm-3 about-body-subtitle">
-          Funding
-        </div>
-        <div class="col-sm-9 about-body page-info">
-          Major Macrostrat data infrastructure development was supported by the US National Science Foundation (EAR-1150082, ICER-1440312), with ongoing support for data acquisition supported by NSF EAR-1948843 and ICER-1928323. Continuous and ongoing support has also been provided by the UW-Madison <a href="http://geoscience.wisc.edu/geoscience/">Department of Geoscience</a>. If you use Macrostrat and like what we do, please consider helping out with a <a href="#donate">donation</a>. Every contribute helps us to maintain infrastructure and keep improving.
-        </div>
-      </div>
+  <div class="row about-row">
+    <div class="col-sm-3 about-body-subtitle">
+      Funding
+    </div>
+    <div class="col-sm-9 about-body page-info">
+      Major Macrostrat data infrastructure development was supported by the US National Science Foundation (EAR-1150082, ICER-1440312), with ongoing support for data acquisition supported by NSF EAR-1948843 and ICER-1928323. Continuous and ongoing support has also been provided by the UW-Madison <a href="http://geoscience.wisc.edu/geoscience/">Department of Geoscience</a>. If you use Macrostrat and like what we do, please consider helping out with a <a href="#donate">donation</a>. Every contribute helps us to maintain infrastructure and keep improving.
     </div>
   </div>
 </div>
